--- a/templates/book.html
+++ b/templates/book.html
@@ -1,23 +1,49 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+
   <title>Bookiew</title>
+  <style>
+  body{
+    background-color: #DCDCDC;
+    style="height:100%"
+  }
+</style>
   </head>
 
   <body>
+
+    <header class='container bg-light h-25 text-center '>
+      <div class='float-left'><a href="{{url_for('home')}}">Home</a></div><!--background ,height,text alignment-->
+      <div class='float-right'>{{username}}   <a href="{{url_for('logout')}}">   Log out</a></div>
+      <h1 class="display-2 py-4">Bookiew</h1><!--display is size,py is padding in y direction-->
+      <blockquote class="blockquote">Books are the window through which soul looks out.</blockquote>
+      <div class="blockquote-footer">Anonymous </div>
+    </header>
+
     <br>
-<div class='container bg-light row no-gutters'>
+<div class='container bg-light '>
     <h1 class='container bg-dark text-white text-center my-2'>{{data.title}}</h1>
     <div class='col'>
         Author:<h2> {{data.author}}</h2>
         Year:<h2> {{data.year}}</h2>
         Isbn:<h2> {{data.isbn}}</h2>
     </div>
-    <div class='col text-center bg-info my-2'>
+    <div class="row">
+      <div class='col-sm-6'></div>
+      <div class='col-sm-6 text-center bg-info my-2 '>
         <h2 class=''>Goodread.com rating: </h2>
         <h1>{{average_rating}}</h1>
         <h5 class=''>Reviews received: </h5>
         <h3>{{work_ratings_count}}</h3>
+      </div>
     </div>
 </div>
 {% if reviews != None %}
